--- a/debian/rules
+++ b/debian/rules
@@ -19,14 +19,14 @@ override_dh_auto_build:
 	make -f client.mk build
 	
 override_dh_auto_install:
-	make -f client.mk DESTDIR=$$(pwd)/debian/palemoon prefix=/usr \
-        installdir=/usr/lib/palemoon \
-        sdkdir=/usr/lib/palemoon-devel install
-	rm -rf $$(pwd)/debian/palemoon/usr/share/idl
-	rm -rf $$(pwd)/debian/palemoon/lib/palemoon-devel
-	rm -rf $$(pwd)/debian/palemoon/usr/include
+	make -f client.mk DESTDIR=$$(pwd)/debian/newmoon prefix=/usr \
+        installdir=/usr/lib/newmoon \
+        sdkdir=/usr/lib/newmoon-devel install
+	rm -rf $$(pwd)/debian/newmoon/usr/share/idl
+	rm -rf $$(pwd)/debian/newmoon/lib/newmoon-devel
+	rm -rf $$(pwd)/debian/newmoon/usr/include
 # remove vestigial duplicate file
-	rm -rf $$(pwd)/debian/palemoon/usr/lib/palemoon/palemoon-bin
+	rm -rf $$(pwd)/debian/newmoon/usr/lib/newmoon/newmoon-bin
 
 override_dh_shlibdeps:
-	dh_shlibdeps -l /usr/lib/palemoon
+	dh_shlibdeps -l /usr/lib/newmoon
