--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: newmoon
+Source: powermoon
 Section: web
 Priority: optional
 Maintainer: Roberto Guardato <team@powerprogress.org>
@@ -21,16 +21,14 @@ Build-Depends: debhelper (>= 9),
         mesa-common-dev,
         libx11-xcb-dev,
 Standards-Version: 3.9.6
-Homepage: http://www.palemoon.org/
+Homepage: http://www.powerprogress.org/
 
-Package: newmoon
+Package: powermoon
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
          libavcodec54 | libavcodec-extra54 |libavcodec55 | libavcodec-extra55 | libavcodec56 | libavcodec-extra56 | libavcodec57 | libavcodec-extra57 | libavcodec58 | libavcodec-extra58 | libavcodec-ffmpeg56 | libavcodec-ffmpeg-extra56
 Provides: x-www-browser
-Conflicts: newmoon
-Replaces: newmoon
+Conflicts: powermoon
+Replaces: powermoon
 Description: Firefox-based, efficient and easy to use web browser
- New Moon is unofficial Pale Moon port that offers selected features and optimizations to maximize the browser's speed, stability and user experience, while maintaining
- compatibility with the thousands of Firefox extensions you have come 
- to love and rely on.
+ Power Moon is unofficial Pale Moon port that offers selected features and optimizations for PowerPC processor to maximize the browser's speed, stability and user experience.
