--- a/application/palemoon/branding/unofficial/powermoon.desktop
+++ b/application/palemoon/branding/unofficial/powermoon.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=New Moon
+Name=Power Moon
 GenericName=Web Browser
 GenericName[ar]=متصفح ويب
 GenericName[ast]=Restolador Web
